# cookbook

./: .gitignore  README.md  pyproject.toml
experiments/: action_prompt_experiments.ipynb  batch_experiment_run.ipynb  batch_run.py  batch_run_google.ipynb  eval.py  few_shot_xrif_experiments.ipynb  graph_nav.ipynb  pipeline_poc.ipynb  requirements.in  requirements.txt  uw_e7_xrif_experiments.ipynb  vlm_xrif_experiments.ipynb
experiments/datasets/: Datasets & Prompts - E7 Test Cases.csv  uw_e7_floor1.csv
experiments/experiment_configs/: all_e7_deepseek1.5b_hfembed.yaml  all_e7_deepseek7b.yaml  all_e7_deepseek7b_hfembed.yaml  gpt4o_mini_e7_hgf_embed.yaml
experiments/experiment_configs/deepseek/: all_e5_deepseek1.5b.yaml  all_e5_deepseek14b.yaml  all_e5_deepseek7b.yaml  all_e7_deepseek1.5b.yaml  all_e7_deepseek14b.yaml  all_e7_deepseek7b.yaml  all_warehouse_deepseek1.5b.yaml  all_warehouse_deepseek14b.yaml  all_warehouse_deepseek7b.yaml  few_e7_deepseek1.5b.yaml  few_e7_deepseek7b.yaml
experiments/experiment_configs/google/: gemini_e5_hgf_embed.yaml  gemini_e7_hgf_embed.yaml  gemini_warehouse_hgf_embed.yaml
experiments/prompts/: e7_xrif_actions_6.yaml  few_shot_xrif.yaml  warehouse_actions_1.yaml  xrif_actions_1.yaml  xrif_actions_5.yaml
experiments/test_datasets/: E5_Test_Cases.csv  E7_Test_Cases.csv  warehouse_testcases.csv  warehouse_tests.csv
experiments/test_results/: E7_Test_Results.csv  E7_Test_Results_7b.csv  E7_Test_Results_7b_1.csv  all_e5_deepseek1.5b.csv  all_e5_deepseek14b.csv  all_e5_deepseek14b.yaml.csv  all_e5_deepseek7b.csv  all_e7_deepseek1.5b.csv  all_e7_deepseek14b.csv  all_e7_deepseek7b.csv  all_warehouse_deepseek1.5b.csv  all_warehouse_deepseek14b.csv  all_warehouse_deepseek7b.csv  eval_test.csv  gemini_e5_hgf_embed.csv  gemini_e7_hgf_embed.csv  gemini_warehouse_hgf_embed.csv  gpt4o_mini_e5_hgf_embed.csv  gpt4o_mini_e7_hgf_embed.csv  gpt4o_mini_warehouse_hgf_embed.csv
experiments/waypoint_datasets/: example_1_anwser.json  parts_store_example.csv  uw_e5_floor1.csv  uw_e7_floor1.csv
uwaterloo-e7/: xrif_experiments.ipynb
(+1777 files in other folders)
