[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["ammar siddiqui <ammar.siddiqui847@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.5.1"
transformers = "<=4.45.1"
wandb = "^0.19.1"
cohere = "^5.13.4"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
