[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["ammar siddiqui <ammar.siddiqui847@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
torch = "^2.5.1"
transformers = "<=4.51.3"
wandb = "^0.19.10"
cohere = "^5.14.0"
onnx = "^1.17.0"
onnxruntime = "^1.21.1"
ray = {extras = ["data", "train", "tune"], version = "^2.40.0"}
horovod = "^0.28.1"
seaborn = "^0.13.2"
papermill = "^2.6.0"
python-dotenv = "^1.1.0"
weave = "^0.51.44"
openai = "^1.68.2"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
